# chatieee

./: .dockerignore  .firebaserc  .gitignore  DATABASE_SCHEMA.md  Dockerfile  README.md  cloudbuild.yaml  firebase.json  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
app/: globals.css  layout.tsx  page.tsx
app/api/backend/: utils.ts
app/api/backend/ingest/[id]/: route.ts
app/api/backend/ingest_pdf/: route.ts
app/api/backend/query/: route.ts
app/components/: NavBar.tsx
app/ingest/: page.tsx
app/ingest/[id]/: route.ts
app/lib/: api.ts  firebase-storage.ts
issues/: issues.md
src/: api.py  config.py  query.py  query_rag.py
src/chatieee/: __init__.py  cli.py  config.py  document_loader.py  llamacloud.py  models.py  pipeline.py  storage.py  text_splitter.py
src/ingest/: embed_and_update_chunks.py  embedding.py  pdf_ingest.py
src/utils/: database.py  logger.py  storage.py
